Some changes & fixes

--- a/CloudRPC/sources/index.html
+++ b/CloudRPC/sources/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="initial-scale=1.0">
+    <meta name="darkreader-lock">
     <link href="http://127.0.0.1:9888/style" rel="stylesheet">
     <title>CloudRPC {{ version }}</title>
 </head>
@@ -18,8 +19,8 @@ function onLoad() {
     
     </br><span>Info:</span>
     <div id="info">
-        <p><a href="https://github.com/dest4590/CloudRPC">CloudRPC</a> <span style="color: deepskyblue;">{{ version }}</span> <span style="color: gray;">({{ codename }})</span></p>
-        <p>Started: {{ startTime }}</p>
+        <p><a href="https://github.com/dest4590/CloudRPC" target="_blank">CloudRPC</a> <span style="color: deepskyblue;">{{ version }}</span> <span style="color: gray;">({{ codename }})</span></p>
+        <p>Started: {{ start_time }}</p>
     </div>
 </body>
 </html>
